--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ asgiref==3.8.1
 blinker==1.4
 
 cryptography==3.4.8
-dbus-python==1.2.18
+
 distro==1.7.0
 
 Django==5.0.6
@@ -24,7 +24,7 @@ SecretStorage==3.3.1
 six==1.16.0
 sqlparse==0.5.0
 typing_extensions==4.12.2
-
+wadllib==1.3.6
 zipp==1.0.0
 
 
